--- a/5_problem/12_conclusion.tex
+++ b/5_problem/12_conclusion.tex
@@ -15,7 +15,7 @@
 мобільних пристроях.
 
 
-Було розглянуто алгоритм знаходження ключових точок SIFT.
+Описано алгоритм знаходження ключових точок SIFT.
 Показано, як знаходити найкращу матрицю гомографії за
 допомогою RANSAC. Побудовано кінцевий алгоритм створення
 панорамного знімку без викладача (алгоритм \ref{al:panorama_creating_algorithm}).
@@ -23,4 +23,7 @@
 
 Запропоновано метод прийняття рішення щодо того, чи обирати панорамний знімок як слайд, чи ні.
 Оглянуто теоретичне підґрунтя темпоральної медіани для
-знешумлення так покращення якості панорамних знімків.
+знешумлення так покращення якості панорамних знімків. Запропоновано використання швидкої 
+медіани, яка має складність $\mathcal{O}(h \cdot w)$ на відміну від звичайної темпоральної, в
+якій має $\mathcal{O}(h \cdot w \cdot m^2)$. Дана заміна прискорила роботу інформаційної
+технології.
