--- a/7_conclusions/1_conclusions.tex
+++ b/7_conclusions/1_conclusions.tex
@@ -1,2 +1,25 @@
+В результаті виконання роботи вдалося
+розробити алгоритм створення панорамних слайдів без викладача.
 
+
+Жодна попередня робота не мають всі можливості даної, що і стало однією 
+з причин дослідження за даною темою.
+
+
+Оглянуто теоретичне підґрунтя алгоритму Бойкова-Колмогорова та задачу
+максимального потоку (мінімального розрізу), яку він вирішує. Виявлено, що 
+даний метод досить добре справляється у задачі видалення рухомих об'єктів.
+Також описано згорткові нейромережі сімейства YOLO, MobileNet, R-CNN та 
+Faster-RCNN. Результати свідчать про високу якість детекції людини та можливість
+їх використання на смартфонах. За експериментальними результатами, YOLOv5n є найбільш оптимальним
+методом прибирання викладача.  
+
+
+Було реалізовано демонстративне програмне забезпечення,
+що приймає на вхід відео з параметрами від користувача та 
+будує панорамні оброблені слайди. 
+
+
+Якість результатів слайдів свідчить про проведення подальшої роботи та 
+ще покращення як алгоритму так й інформаційної технології.
 \clearpage
