--- a/config.tex
+++ b/config.tex
@@ -5,14 +5,13 @@
 \def\kind{Магістерська дисертація}
 \def\specialityCode{113}
 \def\specialityTitle{Прикладна математика}
-\def\specialityName{Математичні методи моделювання, розпізнавання образів та комп'ютерного \\
-зору}
+\def\specialityName{Математичні методи моделювання, розпізнавання образів та комп'ютерного зору}
 \def\theme{Перетворення відеозапису з дошки у слайд-шоу}
 \def\gender{male}
 \def\course{2}
 \def\group{ФІ-01мн}
 \def\name{Шило Максим Костянтинович}
 \def\mentorRank{к.т.н.}
-\def\mentorName{Водолазський Євгеній Валерійович}
+\def\mentorName{Водолазський Євген Валерійович}
 \def\reviewerRank{к.т.н., c.н.с., зав. відділом}
 \def\reviewerName{Мацелло Вячеслав Васильович}
