make some changes
- edit conclusions;
- add bibliography for Laplace operator and Otsu binarization;
- remove space between section and sybsection;
- add binarized slides.

--- a/3_preface/2_preface.tex
+++ b/3_preface/2_preface.tex
@@ -74,8 +74,13 @@
 дошки, розбиття її на сектори та розпізнавання написаного на
 дошці тексту та формул.
 
-\textbf{Публікації.}
-Стаття <<Перетворення відеозапису з дошки у слайд-шоу>> авторів
-Кригін В. М. та Шило М. К. прийнята до друку
-Міжнародним науковим журналом “Control Systems and Computers”
-(“Системи керування та комп'ютери”) та буде опублікована в № 2 (298) 2022 року.
+\textbf{Апробація.}
+\begin{itemize}
+      \item Доповідь <<Creating Slides from Video Lecture>> авторів Maksym Shylo, 
+            Anton Smirnov and Valerii Krygin на Masters Symposium on Advances in Data Mining,
+            Machine Learning, and Computer Vision в Українському Католицькому Університеті \cite{bib:masters_symposium}.
+      \item Стаття <<Перетворення відеозапису з дошки у слайд-шоу>> авторів
+            Кригін В. М. та Шило М. К. прийнята до друку
+            Міжнародним науковим журналом “Control Systems and Computers”
+            (“Системи керування та комп'ютери”) та буде опублікована в № 2 (298) 2022 року.
+\end{itemize}
