--- a/5_problem/10_slides_creating.tex
+++ b/5_problem/10_slides_creating.tex
@@ -1,5 +1,5 @@
 \section{Обробка слайдів}
-
+\vspace{-\baselineskip}
 \subsection{Порівняння слайдів}
 
 Після видалення викладача та суміщення кадрів ми створюємо слайди у вигляді
@@ -8,7 +8,7 @@
 слайдів можна використовувати кадри, різниця між індексами яких є більшою, бо
 змін на дошці між сусідніми кадрами може не бути.
 
-Ми використовуємо оператор Лапласа  для знаходження перепадів
+Ми використовуємо оператор Лапласа \cite{website:scikit-image} для знаходження перепадів
 яскравості і зменшення рівня шуму. У наших експериментах саме цей
 оператор надав кращі результати, ніж інші диференціальні оператори
 
@@ -17,8 +17,22 @@
 \end{equation*}
 
 Для одержання маски всіх написів на дошці застосовуємо метод бінаризації
-Оцу . Це швидкий алгоритм, який на наш погляд дає прийнятну
-якість бінаризації для створення слайдів (рис. 5).
+Оцу \cite{website:scikit-image}. Це швидкий алгоритм, який на наш погляд дає прийнятну
+якість бінаризації для створення слайдів (рис. \ref{fig:binarized_slide_example}).
+
+\begin{figure}[H]
+  \centering
+  \subfloat[Кадр з відео]{
+    \includegraphics[width=0.5\textwidth]{images/bondarchuk_rgb}
+  }\\
+  \subfloat[Бінаризовані написи]{
+    \includegraphics[width=0.5\textwidth]{images/bondarchuk_bin}
+  }
+  \caption{Приклад послідовного застосування оператору Лапласа та бінаризації Отсу
+    з відео \cite{video:central_theorem}
+    \label{fig:binarized_slide_example}
+  }
+\end{figure}
 
 Не кожна панорама є новим слайдом. Коли зміни на дошці невеликі
 (наприклад, лектор дописав формулу), треба лише оновити існуючий слайд.
