--- a/5_problem/12_conclusion.tex
+++ b/5_problem/12_conclusion.tex
@@ -1,29 +1,24 @@
 \chapterConclusion
 
-Зроблена постановка задачі створення слайдів. Описано ввідні
-дані алгоритму та запропонована його блок-схема.
-Таким чином, для створення інформаційної технології
-потрібно вивчити методи локалізації людини або рухливих об'єктів та
+Для створення кінцевого алгоритму перетворення відео з дошки на слайди 
+потрібно вивчити методи локалізації людини або рухливих об'єктів,
 зробити стабілізацію відео та панорамне склеювання кадрів.
 
 
-Було розглянуто алгоритм Бойкова-Колмогорова для
-отримання маски рухомих об'єктів. Також описано архітектури
-згорткових мереж YOLO, MobileNet, SSD, R-CNN, їхні переваги та недоліки.
-Виявлено, що дані методи підходять для
-створення інформаційної технології побудови слайдів на
-мобільних пристроях.
+Алгоритм Бойкова-Колмогорова має та може бути застосованим для знаходження
+рухомих об'єктів.
+Виявлено, що згорткові мережі сімейств YOLO, MobileNet, SSD та R-CNN 
+підходять для створення інформаційної технології побудови слайдів на
+мобільних пристроях та можуть бути використані як методи прибирання викладача.
 
 
-Описано алгоритм знаходження ключових точок SIFT.
-Показано, як знаходити найкращу матрицю гомографії за
-допомогою RANSAC. Побудовано кінцевий алгоритм створення
-панорамного знімку без викладача (алгоритм \ref{al:panorama_creating_algorithm}).
+Експериментально доведено, що алгоритм знаходження ключових точок SIFT можна використовувати 
+в задачі знаходження ключових точок на дошці. Також побудований кінцевий алгоритм створення
+панорамного знімку без викладача (алгоритм \ref{al:panorama_creating_algorithm}) був запрограмований та 
+підтвердив точність математичних формул. Д
 
 
-Запропоновано метод прийняття рішення щодо того, чи обирати панорамний знімок як слайд, чи ні.
-Оглянуто теоретичне підґрунтя темпоральної медіани для
-знешумлення так покращення якості панорамних знімків. Запропоновано використання швидкої 
-медіани, яка має складність $\mathcal{O}(h \cdot w)$ на відміну від звичайної темпоральної, в
+Запропоновано використання швидкої медіани для знешумлення панорамних знімків, 
+яка має складність $\mathcal{O}(h \cdot w)$ на відміну від звичайної темпоральної, в
 якій має $\mathcal{O}(h \cdot w \cdot m^2)$. Дана заміна прискорила роботу інформаційної
-технології.
+технології, як і було доведено математично.
