--- a/5_problem/4_bk_algorithm.tex
+++ b/5_problem/4_bk_algorithm.tex
@@ -1,4 +1,5 @@
 \section{Методи локалізації людини та рухомих об'єктів}
+\vspace{-\baselineskip}
 \subsection{Локалізація рухомих об'єктів}
 
 Розглянемо теоретичне підґрунтя методів, які використовуються в даній роботі для
