--- a/5_problem/7_frames_matching.tex
+++ b/5_problem/7_frames_matching.tex
@@ -1,5 +1,5 @@
 \section{Створення панорами}
-
+\vspace{-\baselineskip}
 \subsection{Пошук відповідності між кадрами}
 
 Рух камери не є рідкістю для відеозаписів лекцій. Камера може труситись,
