--- a/5_problem/main.tex
+++ b/5_problem/main.tex
@@ -1,4 +1,4 @@
-\chapter{Постановка задачі створення слайдів}
+\chapter{Алгоритм створення слайдів}
 \import{}{1_preface}
 \import{}{2_problem}
 \import{}{3_solution}
