--- a/6_results/4_conclusion.tex
+++ b/6_results/4_conclusion.tex
@@ -1,9 +1,17 @@
 \chapterConclusion
 
-Наведено заміри швидкодії та результати роботи згорткових нейромереж та алгоритму Б-К. 
+Заміри швидкодії та результати роботи згорткових нейромереж та алгоритму Б-К показують
+їхню доцільність для прибирання викладача та їх використання на смартфоні. 
 Можна стверджувати, що згорткова нейромережа YOLOv5 є оптимальним способом
 прибирання викладача з відео. Також варто відмітити, що алгоритм Б-К
 працює краще за протестовані нейромережі,
-коли викладач має якийсь предмет в руках. Продемонстровано роботу інформаційної
-технології створення панорамних слайдів. Запропоновано використання швидкої 
-медіани замість звичайної темпоральної, що прискорило роботу системи.
+коли викладач має якийсь предмет в руках. 
+
+
+Інформаційна технологія створення панорамних слайдів дає досить якісні результати, 
+однак, чим менша панорама ~---~ тим менше часу на одну ітерацію її створення. Дану проблему 
+можна вирішити детектуванням дошки, тоді панорамний знімок буде менший. 
+
+Швидка медіана справді швидша за звичайну темпоральну, тому це також
+прискорило роботу системи. Результати її застосування свідчать про підвищення
+якості панорамних знімків.
