--- a/bibliography.bib
+++ b/bibliography.bib
@@ -361,6 +361,22 @@
   pages   = {198--206},
   doi     = {10.1109/TMM.2006.886385}
 }
+@article{bib:masters_symposium,
+  title   = {Creating Slides from Video Lecture},
+  author  = {Maksym Shylo and Anton Smirnov and Valerii Krygin},
+  year    = 2021,
+  journal = {Master's Symposium on Advances in Data Mining, Machine Learning, and Computer Vision, Ukrainian Catholic University},
+  url     = {https://s3.eu-central-1.amazonaws.com/ucu.edu.ua/wp-content/uploads/sites/8/2021/04/Creating-Slides-from-Video-Lecture.pdf}
+}
+@misc{video:central_theorem,
+  title    = {Л21. Центральна гранична теорема},
+  author   = {Семен Боднарчук},
+  year     = 2022,
+  month    = {Jun},
+  journal  = {YouTube},
+  url      = {https://youtu.be/wSjCy_QMJSg},
+  language = {ukrainian}
+}
 @misc{video:dorohovtsev_spetskurs_vesna,
   title        = {Лекция 5/1. Спецкурс весна 2020, Дороговцев Андрей Анатольевич},
   author       = {Theory of Stochastic Processes},
@@ -491,4 +507,14 @@
   url      = {https://doi.org/10.5281/zenodo.6222936},
   version  = {v6.1},
   language = {english}
+}
+@article{website:scikit-image,
+  title     = {scikit-image: image processing in Python},
+  author    = {Van der Walt, Stefan and Sch{\"o}nberger, Johannes L and Nunez-Iglesias, Juan and Boulogne},
+  year      = 2014,
+  journal   = {PeerJ},
+  publisher = {PeerJ Inc.},
+  volume    = 2,
+  pages     = {e453},
+  url       = {https://doi.org/10.7717/peerj.453}
 }
