--- a/presentation/slides/13_slide_process_pan_1.tex
+++ b/presentation/slides/13_slide_process_pan_1.tex
@@ -4,11 +4,11 @@
     \begin{figure}[H]
         \centering
         \subfloat[RGB слайд]{
-            \includegraphics[width=0.45\textwidth]{images/nyakovlev_ivk_rgb.png}
+            \includegraphics[width=0.45\textwidth]{images/bondarchuk_rgb.png}
         }
         \subfloat[Оператор Лапласа + Бінаризація Отсу]{
-            \includegraphics[width=0.45\textwidth]{images/nyakovlev_ivk_bin.png}
+            \includegraphics[width=0.45\textwidth]{images/bondarchuk_bin.png}
         }
-        \caption{Джерело ~---~ \url{https://youtu.be/vlKvBax6nHY}}
+        \caption{Джерело ~---~ \url{https://youtu.be/wSjCy_QMJSg}}
     \end{figure}
 \end{frame}
