--- a/1_title/2_task.tex
+++ b/1_title/2_task.tex
@@ -59,7 +59,7 @@
     \item[6.]
         Орієнтовний перелік ілюстративного матеріалу: 15 слайдів.
     \item[7.]
-        Орієнтовний перелік публікацій: 1 публікація.
+        Орієнтовний перелік публікацій: 2 публікації.
     \item[8.]
         Дата видачі завдання ${\text{\underline{\hspace{10em}}}}$
 \end{enumerate}
@@ -70,19 +70,21 @@
 
 \begin{table}[H]
     \centering
-    \begin{tabular}{|p{0.2in} | p{3in} | p{2.1in} | p{0.9in}|}
+    \begin{tabular}{|p{0.2in} | p{2.9in} | p{2.1in} | p{0.9in}|}
         \hline
         № з/п & Назва етапів виконання магістерської дисертації            & Термін виконання етапів магістерської дисертації & Примітка \\
         \hline
-        1.    & Постановка задачі та мети                                  &                                                  &          \\
+        1.    & Постановка задачі та мети                                  & 21.09.2020 - 15.10.2020                          &          \\
         \hline
-        2.    & Опис теоретичного підґрунтя                                &                                                  &          \\
+        2.    & Дослідження літератури                                     & 15.09.2020 - 10.01.2021                          &          \\
         \hline
-        3.    & Створення математичної моделі створення панорамних слайдів &                                                  &          \\
+        3.    & Створення математичної моделі створення панорамних слайдів & 10.01.2021 - 20.06.2021                          &          \\
         \hline
-        4.    & Імплементація інформаційної технології                     &                                                  &          \\
+        4.    & Імплементація інформаційної технології                     & 20.06.2021 - 15.01.2022                          &          \\
         \hline
-        5.    & Аналіз і висновки                                          &                                                  &          \\
+        5.    & Аналіз і висновки                                          & 15.01.2022 - 20.02.2022                          &          \\
+        \hline
+        6.    & Створення документації                                     & 20.03.2022 - 20.05.2022                          &          \\
         \hline
     \end{tabular}
 \end{table}
