make another changes
- add references to images;
- remove some empty speces;
- edit conclusions;

--- a/5_problem/11_fast_median.tex
+++ b/5_problem/11_fast_median.tex
@@ -3,7 +3,8 @@
 Введемо необхідні означення.
 
 \begin{definition}
-    Накопичувальна сума масиву \cite{bib:integral_image} $X$~---~це масив, кожний елемент якого є сумою всіх попередніх.
+    Накопичувальна сума масиву \cite{bib:integral_image} $X$~---~це масив, кожний елемент 
+    якого є сумою всіх попередніх.
 \end{definition}
 
 Наведемо рекурентну формулу обчислення накопичувальної суми
@@ -20,8 +21,8 @@
 
 \begin{definition}
     Темпоральною медіаною у комп'ютерному зорі називають зображення,
-    в кожному пікселі якого знаходиться медіанне значення, що знайдене між значеннями пікселів у часовому проміжку
-    (рис. \ref{fig:temporal_median_example}).
+    в кожному пікселі якого знаходиться медіанне значення, що знайдене між значеннями 
+    пікселів у часовому проміжку.
 \end{definition}
 
 Темпоральну медіану застосовують у комп'ютерному зорі для отримання
