--- a/5_problem/12_conclusion.tex
+++ b/5_problem/12_conclusion.tex
@@ -12,13 +12,12 @@
 мобільних пристроях та можуть бути використані як методи прибирання викладача.
 
 
-Експериментально доведено, що алгоритм знаходження ключових точок SIFT можна використовувати 
+Емпіричним шляхом дійшли висновку, що алгоритм знаходження ключових точок SIFT можна використовувати 
 в задачі знаходження ключових точок на дошці. Також побудований кінцевий алгоритм створення
 панорамного знімку без викладача (алгоритм \ref{al:panorama_creating_algorithm}) був запрограмований та 
-підтвердив точність математичних формул. Д
+підтвердив точність математичних формул.
 
 
 Запропоновано використання швидкої медіани для знешумлення панорамних знімків, 
 яка має складність $\mathcal{O}(h \cdot w)$ на відміну від звичайної темпоральної, в
-якій має $\mathcal{O}(h \cdot w \cdot m^2)$. Дана заміна прискорила роботу інформаційної
-технології, як і було доведено математично.
+якій має $\mathcal{O}(h \cdot w \cdot m^2)$.
