--- a/5_problem/9_panorama_creating.tex
+++ b/5_problem/9_panorama_creating.tex
@@ -5,8 +5,19 @@
 камеру, тому написи, які були на дошці, перестають бути видимими для
 глядачів, які не встигли записати матеріал, що було тільки-но
 представлено. Рішенням цієї та інших пов'язаних з тремтінням
-камери проблем є побудова панорами, яка створюється шляхом склеювання
-та накладання кадрів з відео.
+камери проблем є побудова панорами (рис. \ref{fig:panorama_example}), яка 
+створюється шляхом склеювання та накладання кадрів з відео.
+
+\begin{definition}
+    Панорамою \(W^{i}\) називатимемо відображення
+    \(W^{i}:P_{W}^{i} \rightarrow C\) з множини
+    \(P_{W}^{i} = \left\{ 1,\ldots,w^{i} \right\} \times \left\{ 1,\ldots,h^{i} \right\}\)
+    пікселів у множину \(C\mathbb{\subset R}\) інтенсивностей.
+\end{definition}
+
+Зауважимо, що
+у кожної панорами може бути своя ширина \(w^{i} \geq w\) і висота
+\(h^{i} \geq h\).
 
 \begin{figure}[H]
     \centering
@@ -28,16 +39,7 @@
     }
 \end{figure}
 
-\begin{definition}
-    Панорамою \(W^{i}\) називатимемо відображення
-    \(W^{i}:P_{W}^{i} \rightarrow C\) з множини
-    \(P_{W}^{i} = \left\{ 1,\ldots,w^{i} \right\} \times \left\{ 1,\ldots,h^{i} \right\}\)
-    пікселів у множину \(C\mathbb{\subset R}\) інтенсивностей.
-\end{definition}
-
-Зауважимо, що
-у кожної панорами може бути своя ширина \(w^{i} \geq w\) і висота
-\(h^{i} \geq h\).
+Наведемо алгоритм створення панорамного слайду (алгоритм \ref{al:panorama_creating_algorithm}).
 
 \begin{algorithm}[H]
     \caption{Створення панорами}
