--- a/6_results/3_futher_improvements.tex
+++ b/6_results/3_futher_improvements.tex
@@ -3,16 +3,13 @@
 На поточний момент технологія оцифровування відеозапису дошки вже може
 видавати панорамні слайди за вхідними параметрами користувача. Але існує
 ряд покращень, які планується внести у майбутньому:
-
 \begin{itemize}
-    \item можливість детектувати дошку, що дасть приріст у швидкості обробки
-          всього відео, оскільки панорама буде створюватись по кадрам меншого розміру;
-    \item можливість детектувати секції дошки, яка розділена на декілька малих дошок;
-    \item можливість отримати панорамне відео, а не слайди;
-    \item можливість векторизувати написи на дошці;
-    \item реалізувати програмну частину за допомогою більш ефективних засобів:
-      наприклад, використовувати компільовану мову програмування
-      та обчислення на GPU \cite{bib:cuda,bib:opencl}.
+      \item можливість детектувати дошку, що пришвидшить обробку відео;
+      \item можливість детектувати секції дошки, яка розділена на декілька малих дошок;
+      \item можливість отримати панорамне відео, а не слайди;
+      \item можливість векторизувати написи на дошці;
+      \item використання компільованої мови програмування та обчислення на GPU \cite{bib:cuda,bib:opencl} для
+            прискорення програми.
 \end{itemize}
 
 \clearpage
