--- a/6_results/4_conclusion.tex
+++ b/6_results/4_conclusion.tex
@@ -12,6 +12,5 @@
 однак, чим менша панорама ~---~ тим менше часу на одну ітерацію її створення. Дану проблему 
 можна вирішити детектуванням дошки, тоді панорамний знімок буде менший. 
 
-Швидка медіана справді швидша за звичайну темпоральну, тому це також
-прискорило роботу системи. Результати її застосування свідчать про підвищення
-якості панорамних знімків.
+Результати застосування швидкої медіани відповідають припущенню, висунутому в минулому розділі.
+Її використання прискорило роботу інформаційної технології. 
