--- a/6_results/4_conclusion.tex
+++ b/6_results/4_conclusion.tex
@@ -3,14 +3,14 @@
 Заміри швидкодії та результати роботи згорткових нейромереж та алгоритму Б-К показують
 їхню доцільність для прибирання викладача та їх використання на смартфоні. 
 Можна стверджувати, що згорткова нейромережа YOLOv5 є оптимальним способом
-прибирання викладача з відео. Також варто відмітити, що алгоритм Б-К
-працює краще за протестовані нейромережі,
-коли викладач має якийсь предмет в руках. 
+прибирання викладача з відео. Також варто відмітити, нейромережі 
+працюють гірше для задачі видалення викладача, коли в нього є щось в руках, 
+оскільки вони знаходять лише людину, в той час як Б-К алгоритм ~---~ всі рухомі об'єкти.
 
 
 Інформаційна технологія створення панорамних слайдів дає досить якісні результати, 
-однак, чим менша панорама ~---~ тим менше часу на одну ітерацію її створення. Дану проблему 
-можна вирішити детектуванням дошки, тоді панорамний знімок буде менший. 
+однак, чим більша панорама ~---~ тим більше часу на одну ітерацію її створення. Дану проблему можна вирішити 
+детектуванням дошки, тоді панорамний знімок буде менший. 
 
 Результати застосування швидкої медіани відповідають припущенню, висунутому в минулому розділі.
 Її використання прискорило роботу інформаційної технології. 
