ahh, the last commit, I hope

--- a/3_preface/2_preface.tex
+++ b/3_preface/2_preface.tex
@@ -4,16 +4,16 @@
 \textbf{Актуальність роботи.}
 Задача створення конспекту лекцій не є новою
 та стала ще більш актуальною,
-оскільки з масовим переходом навчання у віддалений режим навчання
+оскільки з масовим переходом навчання у віддалений режим
 постала проблема створення якісних
 лекційних матеріалів, зокрема слайдів, які містять
 стислу суть занять. Корисно мати технологію, що
 перетворює відео лекцію у стисле слайд шоу, на
-якому будуть написи з дошки без викладача і до того
-ж всю область дошки, навіть якщо камера
+якому будуть написи з дошки без викладача  і вся область 
+дошки, навіть якщо камера
 рухалась.
 
-Дана інформаційна технологія повинна мати ряд властивостей:
+Побудована на базі алгоритму інформаційна технологія повинна мати ряд властивостей:
 \begin{itemize}
       \item здатність працювати на звичайному смартфоні у режимі реального часу;
       \item можливість працювати з дошками різного кольору;
