--- a/5_problem/12_conclusion.tex
+++ b/5_problem/12_conclusion.tex
@@ -19,5 +19,5 @@
 
 
 Запропоновано використання швидкої медіани для знешумлення панорамних знімків, 
-яка має складність $\mathcal{O}(h \cdot w)$ на відміну від звичайної темпоральної, в
-якій має $\mathcal{O}(h \cdot w \cdot m^2)$.
+зі складністю $\mathcal{O}(h \cdot w)$ на відміну від звичайної темпоральної,
+яка має $\mathcal{O}(h \cdot w \cdot m^2)$.
