update presentation and conclusions

--- a/7_conclusions/1_conclusions.tex
+++ b/7_conclusions/1_conclusions.tex
@@ -9,8 +9,8 @@
 Оглянуто теоретичне підґрунтя алгоритму Бойкова-Колмогорова та задачу
 максимального потоку (мінімального розрізу), яку він вирішує. Виявлено, що
 даний метод досить добре справляється у задачі видалення рухомих об'єктів.
-Результати роботи згорткових нейромереж сімейства YOLO, MobileNet, R-CNN та
-Faster-RCNN свідчать про високу якість детекції людини та можливість
+Результати роботи згорткових нейромереж сімейства  YOLO, MobileNet, SSD та
+R-CNN свідчать про високу якість детекції людини та можливість
 їх використання на смартфонах. За експериментальними результатами YOLOv5n є найбільш оптимальним
 методом прибирання викладача.
 
