--- a/presentation/slides/15_slide_conclusions.tex
+++ b/presentation/slides/15_slide_conclusions.tex
@@ -1,22 +1,26 @@
 \section{Висновки}
 \begin{frame}
   \frametitle{Висновки}
-  Побудовано алгоритм, що перетворює відеозапис лекції у панорамні знімки без викладача з камерою, що може
-  рухатись. Створена інформаційна технологія по даному алгоритму. Програма є досить
-  швидкою, оскільки може оброблювати відео з високою роздільною здатністю $1920 \times 1080$. 
-  Наприклад обробка 45 хв відео (\url{https://youtu.be/_aGdtc23o1o}) на комп'ютері з 
-  процесором Intel Core i5-7200U @ 4x 3,1GHz на операційній системі Ubuntu 21.04 займає
-  всього 12 хвилин. Такі результати свідчать про можливу подальшу роботу над даною темою.
-
-  Майбутні покращення:
   \begin{itemize}
-    \item можливість детектувати дошку, що дасть приріст у швидкості обробки
-          всього відео, оскільки панорама буде створюватись по кадрам меншого розміру;
-    \item можливість детектувати секції дошки, яка розділена на декілька малих дошок;
-    \item можливість отримати панорамне відео, а не слайди;
-    \item можливість векторизувати написи на дошці;
-    \item реалізувати програмну частину за допомогою більш ефективних засобів:
-          наприклад, використовувати компільовану мову програмування
-          та обчислення на GPU.
+    \item В результаті виконання роботи вдалося розробити алгоритм створення панорамних слайдів без викладача.
+    \item Виявлено, що алгоритм Бойкова-Колмогорова досить добре справляється у задачі видалення рухомих об'єктів.
+          Результати роботи згорткових нейромереж сімейства YOLO, MobileNet, SSD та
+          R-CNN свідчать про високу якість детекції людини та можливість
+          їх використання на смартфонах. За експериментальними результатами YOLOv5n є найбільш оптимальним
+          методом прибирання викладача.
+    \item Було реалізовано програмне забезпечення,
+          що приймає на вхід відео з параметрами від користувача та
+          будує панорамні оброблені слайди.
+    \item Якість результатів слайдів свідчить про необхідність проведення подальшої роботи та
+          ще покращення алгоритму й інформаційної технології. Наприклад детекція дошки прискорить
+          роботу системи, оскільки розмір панорами зменшиться і потрібно буде менше часу для її обробки.
   \end{itemize}
+
+
+
+
+
+
+
+
 \end{frame}
