--- a/presentation/slides/4_slide_task.tex
+++ b/presentation/slides/4_slide_task.tex
@@ -5,7 +5,7 @@
     \textit{Метою роботи} є розробка алгоритму, що перетворює
     відеозапис лекції у панорамні знімки без викладача
     за умови, що камера може рухатись. \\
-    Даний алгоритм має:
+    Даний алгоритм має
     \begin{itemize}
         \item враховувати дошки різного кольору;
         \item враховувати рух камери під час зйомки;
