--- a/presentation/slides/7_slide_video_stab.tex
+++ b/presentation/slides/7_slide_video_stab.tex
@@ -3,7 +3,7 @@
   \frametitle{Стабілізація відео}
 
   Оскільки дошка~---~це плоска поверхня, ми можемо знайти матрицю гомографії між двома кадрами.
-  Для цього використовуємо алгоритм SIFT та RANSAC.
+  Для цього використовуємо SIFT та RANSAC.
   \begin{figure}[H]
     \centering
     \includegraphics[width=0.55\textwidth]{images/matches_img}
