--- a/config.tex
+++ b/config.tex
@@ -13,5 +13,5 @@
 \def\name{Шило Максим Костянтинович}
 \def\mentorRank{к.т.н.}
 \def\mentorName{Водолазський Євген Валерійович}
-\def\reviewerRank{к.т.н., c.н.с., зав. відділом}
-\def\reviewerName{Мацелло Вячеслав Васильович}
+\def\reviewerRank{к.т.н., c.н.с.}
+\def\reviewerName{Кийко Володимир Михайлович}
